src/test/deca/context/invalid/SansObjet/DeclVar-NE-string-float-float.deca
// Description:
//    Declaration of a string variable using != operation between a float variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  2.5; 
    float y = 10.01; 
    string z = 2.5 != 10.01; 
}
